syntax = "proto3";
package kitty_chan;

service ReactionRoleService {
  rpc reactionRolesAction (ReactionRoleActionReqDto) returns (ReactionRoleActionResDto);
}

message ReactionRoleActionReqDto {
  string name = 1;
  string action = 2;
  string guildId = 3;
  string channelId = 4;
  repeated RolesMapping rolesMapping = 5;
  DiscordEmbedConfig discordEmbedConfig = 6;
  string reactionRoleMessageRef = 7;
}

message ReactionRoleActionResDto {
  string reactionRoleMessageRef = 1;
}

/**Reaction Role Mapping **/
message RolesMapping{
  string name = 1;
  string roleId = 2;
  RolesMappingEmoji emoji = 3;
}

message RolesMappingEmoji{
  string type = 1;
  string id = 2;
  string name = 3;
  string standardEmoji = 4;
}
/*****/

/**Discord Embed **/
message DiscordEmbedConfig{
  string title = 1;
  string description = 2;
  int32 color = 3;
  DiscordEmbedFooter footer = 4;
  repeated DiscordEmbedFields fields = 5;
}

message DiscordEmbedFooter{
  string text = 1;
}

message DiscordEmbedFields{
  string name = 1;
  string value = 2;
  bool inline = 3;
}
/****/
